[gd_scene load_steps=33 format=3 uid="uid://d0f5ck4nhir82"]

[ext_resource type="Environment" uid="uid://bqnqgflivjvue" path="res://scenes/main-environment.tres" id="1_4cbrs"]
[ext_resource type="PackedScene" uid="uid://dl2ed4gkybggf" path="res://objects/player.tscn" id="2_p6b6p"]
[ext_resource type="Script" path="res://scripts/view.gd" id="3_sxw81"]
[ext_resource type="PackedScene" uid="uid://bpharv43ulngb" path="res://objects/platform_moving.tscn" id="4_yyrm4"]
[ext_resource type="PackedScene" uid="uid://t4up1k146q78" path="res://objects/platform_large.tscn" id="5_xhp2t"]
[ext_resource type="PackedScene" uid="uid://bs65o07otxbmm" path="res://objects/moving_object_path_3d.tscn" id="6_nl1cn"]
[ext_resource type="PackedScene" uid="uid://dhxok27jxvik8" path="res://objects/flag.tscn" id="7_tc4g8"]
[ext_resource type="PackedScene" uid="uid://cxea8lmw7cy1l" path="res://objects/player_kill_volume.tscn" id="9_mb3e5"]
[ext_resource type="PackedScene" uid="uid://cyvet7kb6y80r" path="res://objects/checkpoint.tscn" id="10_4y5fl"]
[ext_resource type="PackedScene" uid="uid://rjh4ifidqrfp" path="res://objects/platform_medium.tscn" id="11_cbbet"]
[ext_resource type="PackedScene" uid="uid://dfpisimsgf5ce" path="res://objects/coin.tscn" id="15_58avj"]
[ext_resource type="PackedScene" uid="uid://d273gr0kmlcdm" path="res://objects/platform_large_bg.tscn" id="17_bed7t"]
[ext_resource type="PackedScene" uid="uid://c86a02uxe4xxo" path="res://objects/platform_tilting.tscn" id="18_ryg8o"]
[ext_resource type="PackedScene" uid="uid://c7ntm1s6rhcq6" path="res://objects/platform_large_tall.tscn" id="19_hwfo6"]
[ext_resource type="PackedScene" uid="uid://cq5nx4jpu3p7x" path="res://objects/platform_large_tall_bg.tscn" id="20_jrqjm"]
[ext_resource type="Script" path="res://objects/rotator.gd" id="23_f5fd0"]
[ext_resource type="PackedScene" uid="uid://c1bkkjdso0ii5" path="res://objects/platform_large_cross_bg.tscn" id="33_koaex"]
[ext_resource type="PackedScene" uid="uid://cts2dtt01cp8l" path="res://objects/platform_big_cross.tscn" id="35_8j468"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="36_rtkg7"]
[ext_resource type="Texture2D" uid="uid://cd7oyc56ehkx1" path="res://sprites/coin.png" id="37_2uht2"]
[ext_resource type="LabelSettings" uid="uid://daohhjonjrdx8" path="res://themes/label_settings.tres" id="38_aikn4"]
[ext_resource type="FontFile" uid="uid://d0cxd77jybrcn" path="res://fonts/lilita_one_regular.ttf" id="39_76y3j"]
[ext_resource type="Theme" uid="uid://d3avl0mr4r87l" path="res://themes/default_theme.tres" id="40_gcoe0"]
[ext_resource type="Texture2D" uid="uid://dm50aa4qogm65" path="res://sprites/button_rectangle_depth_gloss.png" id="41_k5l3t"]
[ext_resource type="AudioStream" uid="uid://sr07vsnvrtxu" path="res://sounds/265872_Clocktown.MP3" id="42_755ex"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_u8ojw"]
auto_exposure_scale = 0.75
dof_blur_far_distance = 0.01

[sub_resource type="Curve3D" id="Curve3D_pnk82"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -6.49438, 3.11522, 1.47191, 0, 0, 0, 0, 0, 0, -1.45848, 3.04161, 0.795302),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="LabelSettings" id="LabelSettings_ri8jt"]
font = ExtResource("39_76y3j")
font_size = 128
shadow_color = Color(0, 0, 0, 0.376471)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_x4d2s"]
font = ExtResource("39_76y3j")
font_size = 32
shadow_color = Color(0, 0, 0, 0.376471)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_v6r7m"]
font = ExtResource("39_76y3j")
font_size = 37
shadow_color = Color(0, 0, 0, 0.376471)
shadow_offset = Vector2(2, 2)

[sub_resource type="BoxMesh" id="BoxMesh_fphqn"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d5wxj"]
albedo_color = Color(0.0768358, 0.0768358, 0.0768358, 1)

[node name="Level 2" type="Node3D"]

[node name="Environment" type="WorldEnvironment" parent="."]
unique_name_in_owner = true
environment = ExtResource("1_4cbrs")
camera_attributes = SubResource("CameraAttributesPractical_u8ojw")

[node name="Player" parent="." node_paths=PackedStringArray("view") instance=ExtResource("2_p6b6p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.633547, 3.7732, 25.825)
axis_lock_angular_y = true
view = NodePath("../View")
movement_speed = 300
movement_run_speed = 500
jump_strength = 10

[node name="View" type="Node3D" parent="." node_paths=PackedStringArray("target") groups=["View"]]
process_mode = 3
transform = Transform3D(0.707107, -0.298836, 0.640856, 0, 0.906308, 0.422618, -0.707107, -0.298836, 0.640856, 0, 0, 0)
script = ExtResource("3_sxw81")
target = NodePath("../Player")

[node name="Camera" type="Camera3D" parent="View"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
current = true
fov = 40.0

[node name="World" type="Node3D" parent="."]

[node name="platform-moving" parent="World" instance=ExtResource("4_yyrm4")]
transform = Transform3D(0.639546, 0, -0.768753, 0, 1, 0, 0.768753, 0, 0.639546, 2.41743, 0.0187044, -1.32008)

[node name="platform-moving2" parent="World" instance=ExtResource("4_yyrm4")]
transform = Transform3D(0.786935, 0, 0.617036, 0, 1, 0, -0.617036, 0, 0.786935, 4.10269, 0, 0.520097)

[node name="moving_object_path" parent="World" node_paths=PackedStringArray("object_to_move") instance=ExtResource("6_nl1cn")]
curve = SubResource("Curve3D_pnk82")
object_to_move = NodePath("../platform-moving")
movement_speed = 3.0
ping_pong = true

[node name="platform-large" parent="World" instance=ExtResource("5_xhp2t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.43411, 1.69512, -4.29794)

[node name="platform-large2" parent="World" instance=ExtResource("5_xhp2t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.43411, 1.69512, -13.5571)

[node name="platform-large3" parent="World" instance=ExtResource("5_xhp2t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.43411, 1.69512, -21.8056)

[node name="flag" parent="World" instance=ExtResource("7_tc4g8")]
transform = Transform3D(-0.468608, 0, 0.883406, 0, 1, 0, -0.883406, 0, -0.468608, -2.82147, 2.24294, -22.5095)

[node name="player_kill_volume" parent="World" instance=ExtResource("9_mb3e5")]
transform = Transform3D(1, 0, 2.98023e-08, -4.09782e-08, 1, 2.23517e-07, -2.98023e-08, -5.96046e-08, 1, 0, -10, 0)

[node name="checkpoint" parent="World" instance=ExtResource("10_4y5fl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.29663, 2.24381, -21.3528)

[node name="platform-medium" parent="World" instance=ExtResource("11_cbbet")]
transform = Transform3D(0.723809, 0, -0.508876, 0, 1, 0, 0.427872, 0, 0.86084, 4.49984, 0.909786, -2.38362)

[node name="coin" parent="World" instance=ExtResource("15_58avj")]
transform = Transform3D(0.999946, 0, -0.0104194, 0, 1, 0, 0.0104194, 0, 0.999946, 4.76329, 3.23848, -2.02144)

[node name="coin2" parent="World" instance=ExtResource("15_58avj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.30059, 1.50461, 7.75824)

[node name="platform_large-bg" parent="World" instance=ExtResource("17_bed7t")]
transform = Transform3D(-0.866025, -0.5, -2.18557e-08, 0, -4.37114e-08, 1, -0.5, 0.866025, 3.78552e-08, 3.72239, 3.28368, -5.55743)

[node name="platform-tilting" parent="World" instance=ExtResource("18_ryg8o")]
transform = Transform3D(6.27835e-06, -0.00349064, 0.999994, -0.00174532, 0.999992, 0.00349065, -0.999999, -0.00174533, -1.29148e-07, -3.96613, 2.81286, 2.69467)

[node name="platform-large-tall" parent="World" instance=ExtResource("19_hwfo6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.520196, 1.38727, 26.5642)

[node name="platform-large-tall2" parent="World" instance=ExtResource("19_hwfo6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.520196, 1.38727, 17.4187)

[node name="platform_large_tall_bg" parent="World" instance=ExtResource("20_jrqjm")]
transform = Transform3D(2.57078, 0, 0, 0, 1, 0, 0, 0, 2.57078, -16.3057, 7.75078, 28.7909)

[node name="platform_large_cross_bg20" parent="World" instance=ExtResource("33_koaex")]
transform = Transform3D(0.938356, 0, 0, 0, 0.938356, 0, 0, 0, 0.938356, -6.02023, -2.91954, 7.95)
script = ExtResource("23_f5fd0")

[node name="platform_large_cross_bg24" parent="World" instance=ExtResource("33_koaex")]
transform = Transform3D(1.3775, 0, 0, 0, 0.938356, 0, 0, 0, 1.54431, -6.65307, -4.77283, 29.0269)
script = ExtResource("23_f5fd0")

[node name="platform_large_cross_bg22" parent="World" instance=ExtResource("33_koaex")]
transform = Transform3D(0.938356, 0, 0, 0, 0.938356, 0, 0, 0, 0.938356, -6.65181, 3.00709, 2.75112)
script = ExtResource("23_f5fd0")

[node name="platform_large_cross_bg21" parent="World" instance=ExtResource("33_koaex")]
transform = Transform3D(-8.76379e-08, -2.00492, 0, 2.00492, -8.76379e-08, 0, 0, 0, 2.00492, -14.1304, 8.77335, 7.63948)
script = ExtResource("23_f5fd0")

[node name="platform_large_tall_bg2" parent="World" instance=ExtResource("20_jrqjm")]
transform = Transform3D(2.57078, 0, 0, 0, 1, 0, 0, 0, 3.70392, -14.5555, 7.83529, 7.9293)

[node name="platform_large_tall_bg4" parent="World" instance=ExtResource("20_jrqjm")]
transform = Transform3D(4.46461, 0, 0, 0, 1.73668, 0, 0, 0, 6.43251, -20.7281, 14.7951, -15.9996)

[node name="platform_large_tall_bg3" parent="World" instance=ExtResource("20_jrqjm")]
transform = Transform3D(2.57078, 0, 0, 0, 1, 0, 0, 0, 2.57078, 11.6657, 1.59404, -2.93736)

[node name="platform_large-bg2" parent="World" instance=ExtResource("17_bed7t")]
transform = Transform3D(-2.106e-07, 1, 4.37114e-08, -8.47033e-22, -4.37114e-08, 1, 1, 2.106e-07, -7.37409e-15, -4.51348, 3.75992, 2.78257)

[node name="platform-tilting2" parent="World" instance=ExtResource("18_ryg8o")]
transform = Transform3D(6.27835e-06, -0.00349064, 0.999994, -0.00174532, 0.999992, 0.00349065, -0.999999, -0.00174533, -1.29148e-07, -3.96613, 2.81286, 9.58126)

[node name="platform_large_cross_bg23" parent="World" instance=ExtResource("33_koaex")]
transform = Transform3D(0.938356, 0, 0, 0, 0.938356, 0, 0, 0, 0.938356, -6.65181, 3.00709, 9.63771)
script = ExtResource("23_f5fd0")

[node name="platform_large-bg3" parent="World" instance=ExtResource("17_bed7t")]
transform = Transform3D(-2.106e-07, 1, 4.37114e-08, -8.47033e-22, -4.37114e-08, 1, 1, 2.106e-07, -7.37409e-15, -4.51348, 3.75992, 9.66916)

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.422618, -0.694272, 0.582563, 0, 0.642788, 0.766044, -0.906308, 0.323744, -0.271654, 0, 0, 0)
shadow_enabled = true
shadow_opacity = 0.75

[node name="HUD" type="CanvasLayer" parent="." groups=["HUD"]]
process_mode = 3
script = ExtResource("36_rtkg7")

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="HUD/Control"]
layout_mode = 0
offset_left = 57.0
offset_top = 67.0
offset_right = 313.0
offset_bottom = 323.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("37_2uht2")

[node name="x" type="Label" parent="HUD/Control"]
layout_mode = 0
offset_left = 112.0
offset_top = 64.0
offset_right = 144.0
offset_bottom = 123.0
text = "×"
label_settings = ExtResource("38_aikn4")

[node name="Level Complete" type="Label" parent="HUD/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -429.0
offset_top = 139.0
offset_right = 429.0
offset_bottom = 287.0
grow_horizontal = 2
text = "Level Complete!"
label_settings = SubResource("LabelSettings_ri8jt")

[node name="CoinsLabel" type="Label" parent="HUD/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 144.0
offset_top = 64.0
offset_right = 368.0
offset_bottom = 123.0
text = "0"
label_settings = ExtResource("38_aikn4")

[node name="PlayAgainButton" type="Button" parent="HUD/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -196.0
offset_top = -258.0
offset_right = 196.0
offset_bottom = -122.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
theme = ExtResource("40_gcoe0")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("39_76y3j")
theme_override_font_sizes/font_size = 60
text = "Play Again?"
icon = ExtResource("41_k5l3t")
flat = true
icon_alignment = 1

[node name="TimeLabel" type="Label" parent="HUD/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.5
offset_top = 59.0
offset_right = 48.5
offset_bottom = 115.0
grow_horizontal = 2
text = "00"
label_settings = SubResource("LabelSettings_x4d2s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeNameLabel" type="Label" parent="HUD/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.0
offset_top = 22.0
offset_right = 49.0
offset_bottom = 78.0
grow_horizontal = 2
text = "TIME"
label_settings = SubResource("LabelSettings_v6r7m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Controls" type="Label" parent="HUD/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -360.0
offset_top = 641.0
offset_right = 336.0
offset_bottom = 697.0
grow_horizontal = 2
text = "Run with Shift or top controller buttons"
label_settings = SubResource("LabelSettings_v6r7m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("42_755ex")
volume_db = -20.0
autoplay = true
playback_type = 1

[node name="StaticBody3D6" type="StaticBody3D" parent="."]
transform = Transform3D(-0.120137, 0, -0.992757, 0, 1, 0, 0.992757, 0, -0.120137, -0.833193, 6.7303, -3.15501)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D6"]
transform = Transform3D(4.52695, 0.00969078, 0.109958, 0.00113789, 10.6892, -0.00858436, -0.554556, 0.101041, 0.897593, -5.30622, 1.15209, 10.2271)
mesh = SubResource("BoxMesh_fphqn")
surface_material_override/0 = SubResource("StandardMaterial3D_d5wxj")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="StaticBody3D6"]
transform = Transform3D(4.52695, 0.00969079, 0.109958, 0.00113789, 10.6892, -0.00858436, -0.554556, 0.101041, 0.897594, -12.6561, -1.99302, 11.0573)
mesh = SubResource("BoxMesh_fphqn")
surface_material_override/0 = SubResource("StandardMaterial3D_d5wxj")

[node name="platform_big_cross5" parent="." instance=ExtResource("35_8j468")]
transform = Transform3D(0.00103532, -0.459178, -0.779097, 0.000858278, 0.779098, -0.459178, 0.904343, -0.000213729, 0.00132773, -11.5862, 7.88295, -9.64469)
script = ExtResource("23_f5fd0")
rotation_speed = 0.005

[node name="platform_big_cross6" parent="." instance=ExtResource("35_8j468")]
transform = Transform3D(0.00132576, -0.00811114, -0.904307, 0.000225628, 0.904308, -0.00811082, 0.904343, -0.000213729, 0.00132773, -11.5274, 4.73785, -17.041)
script = ExtResource("23_f5fd0")
rotation_speed = 0.005

[connection signal="coin_collected" from="Player" to="HUD" method="_on_coin_collected"]
[connection signal="reached_goal" from="Player" to="HUD" method="_on_player_reached_goal"]
[connection signal="pressed" from="HUD/Control/PlayAgainButton" to="HUD" method="_on_play_again_button_pressed"]
